ts基本类型和语法知识入门

--- a/Typescript/TS_test/04_TS常用语法/index.html
+++ b/Typescript/TS_test/04_TS常用语法/index.html
@@ -10,6 +10,10 @@
 
 <body>
   <script src="./01_基础类型.js"></script>
+  <script src="./02_接口.js"></script>
+  <script src="./03_类.js"></script>
+  <script src="./04_函数.js"></script>
+  <script src="./05_泛型.js"></script>
 </body>
 
 </html>
